# email-to-remarkable-sync

./: .flake8  .gitignore  CHANGELOG.md  Makefile  README.md  email_to_remarkable.py  pyproject.toml
tests/: conftest.py  test_email_to_remarkable.py  test_integration.py
