[project]
name = "email-to-remarkable-sync"
version = "1.0.0"
description = "Sync PDF attachments from email to reMarkable cloud storage"
authors = [{name = "Shane Dowling", email = "shano@fastmail.fm"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["remarkable", "email", "pdf", "sync", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "rm-api>=1.1.0",
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
isort = "^5.12.0"
pre-commit = "^3.0.0"

[project.scripts]
email-to-remarkable = "email_to_remarkable:main"

[project.urls]
Homepage = "https://github.com/shano/email-to-remarkable-sync"
Repository = "https://github.com/shano/email-to-remarkable-sync"
Issues = "https://github.com/shano/email-to-remarkable-sync/issues"

[tool.poetry]
packages = [{include = "email_to_remarkable.py"}]

[tool.poetry.dependencies]
python = "^3.9"
rm-api = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=email_to_remarkable",
    "--cov-report=term-missing",
    "--cov-report=html",
]